@@ -2,6 +2,9 @@ CHANGELOG
 
 2016-06-16 3.15.1
 
+  * fix(getLogs): allow using the type parameter
+    The syntax is now getLogs(params[, cb])
+    fixes #232
   * fix(json): avoid throwing when late JSON response
     fixes #284
   * fix(nodejs): allow universal lite applications
